--- a/blives.css
+++ b/blives.css
@@ -827,6 +827,7 @@ background-color:#c80f2e;
 color:white;
 height:4em;
 text-align:center;
+font-size:0.9em;
 vertical-align:middle;
 line-height:64px;}
 .healthy{background-color:#c80f2e;
